Implement price plan recommend API operation
